--- a/style.css
+++ b/style.css
@@ -2,9 +2,16 @@
     display: flex;
     flex-direction: column;
     background-color:#00ff26;
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    width: 70%;
+    margin-top: 50px;
 
+}
+
+body {
+    display:flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .row {
